--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview --port 4173",
     "test:unit": "vitest --environment jsdom",
     "build-only": "vite build",
+    "spellcheck": "cspell lint --dot --gitignore --color --cache --show-suggestions \"src/**/*.@(html|js|cjs|mjs|ts|tsx|css|scss|md|vue)\"",
     "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
@@ -32,9 +33,10 @@
     "jsdom": "20.0.0",
     "npm-run-all": "4.1.5",
     "prettier": "2.7.1",
-    "typescript": "~4.7.4",
+    "typescript": "4.7.4",
     "vite": "3.0.9",
     "vitest": "0.23.0",
-    "vue-tsc": "0.40.7"
+    "vue-tsc": "0.40.7",
+    "cspell": "6.31.2"
   }
 }
