--- a/package.json
+++ b/package.json
@@ -15,21 +15,23 @@
   "dependencies": {
     "pinia": "2.0.21",
     "vue": "3.3.4",
-    "vue-router": "4.2.4"
+    "vue-router": "4.2.4",
+    "vuedraggable":"4.1.0"
   },
   "devDependencies": {
-    "vuedraggable":"4.1.0",
-    "@rushstack/eslint-patch": "1.1.4",
-    "@types/jsdom": "20.0.0",
+    "eslint": "8.45.0",
+    "eslint-plugin-cypress": "2.13.3",
+    "eslint-plugin-vue": "9.15.1",
+    "eslint-plugin-simple-import-sort": "10.0.0",
+    "@rushstack/eslint-patch": "1.3.2",
+    "@vue/eslint-config-prettier": "8.0.0",
+    "@vue/eslint-config-typescript": "^11.0.3",
     "@types/node": "16.11.56",
+    "@types/jsdom": "20.0.0",
     "@vitejs/plugin-vue": "3.0.3",
     "@vitejs/plugin-vue-jsx": "2.0.1",
-    "@vue/eslint-config-prettier": "7.0.0",
-    "@vue/eslint-config-typescript": "11.0.0",
     "@vue/test-utils": "2.0.2",
     "@vue/tsconfig": "0.1.3",
-    "eslint": "8.22.0",
-    "eslint-plugin-vue": "9.3.0",
     "jsdom": "20.0.0",
     "npm-run-all": "4.1.5",
     "prettier": "2.7.1",
