--- a/package.json
+++ b/package.json
@@ -10,15 +10,25 @@
     "build-only": "vite build",
     "spellcheck": "cspell lint --dot --gitignore --color --cache --show-suggestions \"src/**/*.@(html|js|cjs|mjs|ts|tsx|css|scss|md|vue)\"",
     "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
+    "prepare": "husky install",
+    "commit": "git-cz",
+    "commitlint": "commitlint --edit"
   },
   "dependencies": {
     "pinia": "2.0.21",
     "vue": "3.3.4",
     "vue-router": "4.2.4",
-    "vuedraggable":"4.1.0"
+    "vuedraggable": "4.1.0"
   },
   "devDependencies": {
+    "husky": "9.1.7",
+    "zx": "7.2.3",
+    "commitizen": "4.3.0",
+    "cz-git": "1.7.0",
+    "@commitlint/cli": "17.6.7",
+    "@commitlint/config-conventional": "17.6.7",
+    "@commitlint/cz-commitlint": "17.6.7",
     "eslint": "8.45.0",
     "eslint-plugin-cypress": "2.13.3",
     "eslint-plugin-vue": "9.15.1",
@@ -34,7 +44,7 @@
     "@vue/tsconfig": "0.1.3",
     "jsdom": "20.0.0",
     "npm-run-all": "4.1.5",
-    "prettier": "2.7.1",
+    "prettier": "3.0.0",
     "typescript": "4.7.4",
     "vite": "3.0.9",
     "vitest": "0.23.0",
