--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "vue-project",
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "run-p type-check build-only",
@@ -15,6 +14,11 @@
     "commit": "git-cz",
     "commitlint": "commitlint --edit"
   },
+  "config": {
+    "commitizen": {
+      "path": "node_modules/cz-git"
+    }
+  },
   "dependencies": {
     "pinia": "2.0.21",
     "vue": "3.3.4",
@@ -22,6 +26,7 @@
     "vuedraggable": "4.1.0"
   },
   "devDependencies": {
+    "tsno": "2.0.0",
     "husky": "9.1.7",
     "zx": "7.2.3",
     "commitizen": "4.3.0",
