--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "prepare": "husky install",
     "commit": "git-cz",
-    "commitlint": "commitlint --edit"
+    "commitlint": "commitlint --edit",
+    "lint:style": "stylelint **/*.{vue,css}"
   },
   "config": {
     "commitizen": {
@@ -26,6 +27,11 @@
     "vuedraggable": "4.1.0"
   },
   "devDependencies": {
+    "stylelint": "15.10.2",
+    "stylelint-config-standard": "34.0.0",
+    "stylelint-config-prettier": "9.0.5",
+    "stylelint-config-html": "1.1.0",
+    "stylelint-config-vue": "1.0.0",
     "tsno": "2.0.0",
     "husky": "9.1.7",
     "zx": "7.2.3",
